# lane-slam

./: .gitignore  README.md
src/anti_instagram/: .autogenerated.md  CMakeLists.txt  README.md  annotation-tool.readme.txt  package.xml  setup.py
src/anti_instagram/annotation-tool/: collect_pixels.m  road_annotation.fig  road_annotation.m  run_road_annotator.m  run_road_annotator_Hang.m
src/anti_instagram/include/anti_instagram/: AntiInstagram.py  __init__.py  kmeans.py  naive_bgr_scaling.py  scale_and_shift.py  utils.py
src/anti_instagram/include/anti_instagram_tests/: __init__.py  annotations_test.py  iids_tests.py
src/anti_instagram/launch/: anti_instagram_node.launch  anti_instagram_test.launch
src/anti_instagram/scripts/: all_tests.yaml  plot_bgr_hist.py  plot_rgb.py
src/anti_instagram/scripts/annotation/: road_annotation.fig  road_annotation.m  run_road_annotator.m  run_road_annotator_nondefault_classes.m  split_annotation_by_files.m
src/anti_instagram/src/: anti_instagram_node.easy_node.yaml  anti_instagram_node.py
src/anti_instagram/tests/: antiinstagram_correctness_test.py  antiinstagram_correctness_test.test  antiinstagram_performance_test.py  antiinstagram_performance_test.test  antiinstagram_stub_test.py  antiinstagram_stub_test.test  decode_test.py
src/duckieteam/: .autogenerated.md  CMakeLists.txt  README.md  package.xml  setup.py
src/duckieteam/include/duckieteam/: __init__.py  person.easy_algo_family.yaml  persons.py  robot.easy_algo_family.yaml  robots.py
src/duckieteam/include/duckieteam/cli/: create_machines.py  roster.py
src/duckieteam/include/duckieteam_tests/: __init__.py  run.py
src/duckieteam/scripts/: create-machines  create-roster
src/duckietown/: .autogenerated.md  CMakeLists.txt  README.md  package.xml  setup.py
src/duckietown/config/baseline/apriltags_ros/: default.yaml  test_default.yaml
src/duckietown/config/baseline/duckietown_description/: default.yaml  test_default.yaml
src/duckietown/include/duckietown_utils/: __init__.py  augmented_reality_utils.py  bag_info.py  bag_logs.py  bag_reading.py  bag_visualization.py  bag_writing.py  caching.py  cli.py  col_logging.py  constants.py  contracts_.py  dates.py  detect_environment.py  disk_hierarchy.py  download.py  draw.py  exception_utils.py  exceptions.py  expand_variables.py  file_utils.py  friendly_path_imp.py  fuzzy.py  image_composition.py  image_conversions.py  image_jpg_create.py  image_operations.py  image_rescaling.py  image_timestamps.py  image_writing.py  instantiate_utils.py  ipython_utils.py  jpg.py  locate_files_impl.py  logging_logger.py  map_utils.py  memoization.py  mkdirs.py  networking.py  parameters.py  (+13 more)
src/duckietown/include/duckietown_utils_tests/: __init__.py  colors.py  fuzzy_match_test.py  hierarchy.py
src/duckietown/launch/: apriltags.launch  avoid_obstacles.launch  calibrate_turn.launch  camera.launch  closed_loop_navigation.launch  duckieRR.launch  f4_demo.launch  ground_projection.launch  indefinite_navigation.launch  intrinsic_calibration.launch  joystick.launch  joystick2.launch  joystick_camera.launch  joystick_camera_led.launch  joystick_dagu.launch  joystick_direct.launch  joystick_direct_camera.launch  joystick_old.launch  joystick_plus_led.launch  joystick_state.launch  kinematics.launch  kinematics_calibration.launch  kinematics_sync.launch  lane_controller.launch  lane_filter.launch  lane_filter_2csv.launch  led_emitter_detector_interpreter_joy.launch  led_emitter_detector_joy.launch  line_detector.launch  line_detector2.launch  localization.launch  make_log.launch  navigation.launch  navigation_graph.launch  odometry_training_pairs.launch  open_loop_intersection_controller.launch  parallel_autonomy.launch  rostest_example.launch  static_obstacle_detector.launch  stop_obstacles.launch  (+10 more)
src/duckietown/launch/old/: apriltags_doublepipeline.launch.old  imu_remote.launch.old  lane_controller2.launch.old  lane_filter2.launch.old  lane_following.launch.old  line_detection_unit_test.launch.old  record_bag.launch.old
src/duckietown_msgs/: .autogenerated.md  CMakeLists.txt  README.md  package.xml
src/duckietown_msgs/msg/: AntiInstagramHealth.msg  AntiInstagramTransform.msg  AprilTagsWithInfos.msg  CarControl.msg  CoordinationClearance.msg  CoordinationSignal.msg  DuckieSensor.msg  FSMState.msg  KinematicsParameters.msg  KinematicsWeights.msg  LEDDetection.msg  LEDDetectionArray.msg  LEDDetectionDebugInfo.msg  LEDInterpreter.msg  LanePose.msg  ObstacleImageDetection.msg  ObstacleImageDetectionList.msg  ObstacleProjectedDetection.msg  ObstacleProjectedDetectionList.msg  ObstacleType.msg  Pixel.msg  Pose2DStamped.msg  Rect.msg  Rects.msg  SceneSegments.msg  Segment.msg  SegmentList.msg  SignalsDetection.msg  SourceTargetNodes.msg  StopLineReading.msg  StreetNameDetection.msg  StreetNames.msg  TagInfo.msg  ThetaDotSample.msg  Trajectory.msg  Twist2DStamped.msg  VehicleCorners.msg  VehiclePose.msg  Vsample.msg  WheelsCmd.msg  (+1 more)
src/duckietown_msgs/srv/: SetFSMState.srv
src/ground_projection/: .autogenerated.md  CMakeLists.txt  README.md  package.xml  setup.py
src/ground_projection/homography/: default.yaml
src/ground_projection/include/ground_projection/: GroundProjection.py
src/ground_projection/launch/: ground_projection.launch
src/ground_projection/scripts/: ex_estimate_homography.py  ex_get_ground_coordinate.py  test_projection.py  test_projection_auto.py
src/ground_projection/src/: ground_projection.cpp.old  ground_projection.easy_node.yaml  ground_projection_node.py
src/ground_projection/srv/: GetGroundCoord.srv  GetImageCoord.srv
src/line_detector/: .autogenerated.md  CMakeLists.txt  README.md  package.xml  setup.py
src/line_detector/include/line_detector/: __init__.py  line_detector1.py  line_detector2.py  line_detector_interface.py  line_detector_lsd.py  line_detector_plot.py  timekeeper.py  visual_state.py  visual_state_fancy_display.py
src/line_detector/launch/: line_detector_bag.launch  line_detector_node.launch
src/line_detector/src/: line_detector_node.py
(+570 files in other folders)
