<?xml version="1.0"?>
<package>
  <name>anti_instagram</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `anti_instagram` in `package.xml`.</description>

  <author email="mfe@todo.todo">mfe</author>

  <license>GPLv3</license>
  <maintainer email="mack@duckietown.org">Mack</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <test_depend>unittest</test_depend>


</package>
