<?xml version="1.0"?>
<package>
  <name>ground_projection</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `ground_projection` in `package.xml`.</description>

  <author email="cchoi@csail.mit.edu">Changhyun Choi</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>image_geometry</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>image_geometry</run_depend>

</package>
