<?xml version="1.0"?>
<package>
  <name>line_detector</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `line_detector` in `package.xml`.</description>

  <author email="hangzhao@mit.edu">Hang Zhao</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>
